--- a/configs/algo/tdtr_iou.yaml
+++ b/configs/algo/tdtr_iou.yaml
@@ -1,3 +1,8 @@
 name: TDTR_IOU
 params:
   - epsilon: 0.1
+    iou_type: "iou"
+  - epsilon: 0.1
+    iou_type: "diou"
+  - epsilon: 0.1
+    iou_type: "ciou"
