--- a/configs/clean.yaml
+++ b/configs/clean.yaml
@@ -1,10 +1,11 @@
 defaults:
   - _self_
-  - dataset: sample
-  - algo: dp
+  - dataset: mot_noise
+  - dataset@gt_dataset: mot
+  - algo: tdtr_iou
   - override hydra/job_logging: colorlog
   - override hydra/hydra_logging: colorlog
 
 # Directories for data
 interim: ./interim
-output: 
+output: ./output
